--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-leaf2c-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-leaf2c-catalog.yml
@@ -58,10 +58,7 @@ anta.tests.connectivity:
       neighbor_port: Ethernet8
       port: Ethernet1
     result_overwrite:
-      categories:
-      - LLDP Topology
-      custom_field: 'local: Ethernet1 - remote: dc1-leaf2a_Ethernet8'
-      description: LLDP topology - validate peer and interface
+      custom_field: 'Local: Ethernet1 - Remote: dc1-leaf2a_Ethernet8'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.1
@@ -69,10 +66,7 @@ anta.tests.connectivity:
       source: Vlan4085
       vrf: MGMT
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2c - Vlan4085 Destination: 10.255.0.1'
-      description: Inband Mgmt Reachability
+      custom_field: 'Source: Inband MGMT SVI_Vlan4085 - Destination: dc1-spine1_10.255.0.1'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.2
@@ -80,10 +74,7 @@ anta.tests.connectivity:
       source: Vlan4085
       vrf: MGMT
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2c - Vlan4085 Destination: 10.255.0.2'
-      description: Inband Mgmt Reachability
+      custom_field: 'Source: Inband MGMT SVI_Vlan4085 - Destination: dc1-spine2_10.255.0.2'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.3
@@ -91,10 +82,7 @@ anta.tests.connectivity:
       source: Vlan4085
       vrf: MGMT
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2c - Vlan4085 Destination: 10.255.0.3'
-      description: Inband Mgmt Reachability
+      custom_field: 'Source: Inband MGMT SVI_Vlan4085 - Destination: dc1-leaf1a_10.255.0.3'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.4
@@ -102,10 +90,7 @@ anta.tests.connectivity:
       source: Vlan4085
       vrf: MGMT
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2c - Vlan4085 Destination: 10.255.0.4'
-      description: Inband Mgmt Reachability
+      custom_field: 'Source: Inband MGMT SVI_Vlan4085 - Destination: dc1-leaf1b_10.255.0.4'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.5
@@ -113,10 +98,7 @@ anta.tests.connectivity:
       source: Vlan4085
       vrf: MGMT
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2c - Vlan4085 Destination: 10.255.0.5'
-      description: Inband Mgmt Reachability
+      custom_field: 'Source: Inband MGMT SVI_Vlan4085 - Destination: dc1-leaf2a_10.255.0.5'
 - VerifyReachability:
     hosts:
     - destination: 10.255.2.1
@@ -124,10 +106,7 @@ anta.tests.connectivity:
       source: Vlan4085
       vrf: MGMT
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2c - Vlan4085 Destination: 10.255.2.1'
-      description: Inband Mgmt Reachability
+      custom_field: 'Source: Inband MGMT SVI_Vlan4085 - Destination: dc1-wan1_10.255.2.1'
 - VerifyReachability:
     hosts:
     - destination: 10.255.2.2
@@ -135,10 +114,7 @@ anta.tests.connectivity:
       source: Vlan4085
       vrf: MGMT
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2c - Vlan4085 Destination: 10.255.2.2'
-      description: Inband Mgmt Reachability
+      custom_field: 'Source: Inband MGMT SVI_Vlan4085 - Destination: dc1-wan2_10.255.2.2'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.11
@@ -146,10 +122,7 @@ anta.tests.connectivity:
       source: Vlan4085
       vrf: MGMT
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2c - Vlan4085 Destination: 10.255.128.11'
-      description: Inband Mgmt Reachability
+      custom_field: 'Source: Inband MGMT SVI_Vlan4085 - Destination: dc2-spine1_10.255.128.11'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.12
@@ -157,10 +130,7 @@ anta.tests.connectivity:
       source: Vlan4085
       vrf: MGMT
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2c - Vlan4085 Destination: 10.255.128.12'
-      description: Inband Mgmt Reachability
+      custom_field: 'Source: Inband MGMT SVI_Vlan4085 - Destination: dc2-spine2_10.255.128.12'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.13
@@ -168,10 +138,7 @@ anta.tests.connectivity:
       source: Vlan4085
       vrf: MGMT
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2c - Vlan4085 Destination: 10.255.128.13'
-      description: Inband Mgmt Reachability
+      custom_field: 'Source: Inband MGMT SVI_Vlan4085 - Destination: dc2-leaf1a_10.255.128.13'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.14
@@ -179,10 +146,7 @@ anta.tests.connectivity:
       source: Vlan4085
       vrf: MGMT
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2c - Vlan4085 Destination: 10.255.128.14'
-      description: Inband Mgmt Reachability
+      custom_field: 'Source: Inband MGMT SVI_Vlan4085 - Destination: dc2-leaf1b_10.255.128.14'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.15
@@ -190,10 +154,7 @@ anta.tests.connectivity:
       source: Vlan4085
       vrf: MGMT
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2c - Vlan4085 Destination: 10.255.128.15'
-      description: Inband Mgmt Reachability
+      custom_field: 'Source: Inband MGMT SVI_Vlan4085 - Destination: dc2-leaf2a_10.255.128.15'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.16
@@ -201,10 +162,7 @@ anta.tests.connectivity:
       source: Vlan4085
       vrf: MGMT
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2c - Vlan4085 Destination: 10.255.128.16'
-      description: Inband Mgmt Reachability
+      custom_field: 'Source: Inband MGMT SVI_Vlan4085 - Destination: dc2-leaf2b_10.255.128.16'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.17
@@ -212,10 +170,7 @@ anta.tests.connectivity:
       source: Vlan4085
       vrf: MGMT
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2c - Vlan4085 Destination: 10.255.128.17'
-      description: Inband Mgmt Reachability
+      custom_field: 'Source: Inband MGMT SVI_Vlan4085 - Destination: dc2-leaf3a.arista.com_10.255.128.17'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.18
@@ -223,18 +178,19 @@ anta.tests.connectivity:
       source: Vlan4085
       vrf: MGMT
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc1-leaf2c - Vlan4085 Destination: 10.255.128.18'
-      description: Inband Mgmt Reachability
+      custom_field: 'Source: Inband MGMT SVI_Vlan4085 - Destination: dc2-leaf3b.arista.com_10.255.128.18'
 anta.tests.field_notices:
 - VerifyFieldNotice44Resolution: null
 - VerifyFieldNotice72Resolution: null
 anta.tests.hardware:
 - VerifyEnvironmentPower:
+    result_overwrite:
+      custom_field: 'Accepted States: ''ok'''
     states:
     - ok
 - VerifyEnvironmentCooling:
+    result_overwrite:
+      custom_field: 'Accepted States: ''ok'''
     states:
     - ok
 - VerifyTemperature: null
@@ -243,6 +199,9 @@ anta.tests.hardware:
     - Arista Networks
     - Arastra, Inc.
     - Not Present
+    result_overwrite:
+      custom_field: 'Accepted Manufacturers: ''Arista Networks'', ''Arastra, Inc.'',
+        ''Not Present'''
 - VerifyTransceiversManufacturers:
     manufacturers:
     - Not Present
@@ -292,6 +251,8 @@ anta.tests.interfaces:
 anta.tests.security:
 - VerifyAPIHttpsSSL:
     profile: eAPI_SSL_Profile
+    result_overwrite:
+      custom_field: 'eAPI HTTPS SSL Profile: eAPI_SSL_Profile'
 anta.tests.snmp:
 - VerifySnmpStatus:
     vrf: default
@@ -311,12 +272,7 @@ anta.tests.software:
     - v1.13.6
     - v1.8.0
 anta.tests.system:
-- VerifyNTP:
-    result_overwrite:
-      categories:
-      - NTP
-      custom_field: NTP
-      description: Synchronised with NTP server
+- VerifyNTP: null
 - VerifyUptime:
     minimum: 86400
 - VerifyReloadCause: null
