--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-leaf3b.arista.com-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc2-leaf3b.arista.com-catalog.yml
@@ -58,40 +58,28 @@ anta.tests.connectivity:
       neighbor_port: Ethernet3
       port: Ethernet3
     result_overwrite:
-      categories:
-      - LLDP Topology
-      custom_field: 'local: Ethernet3 - remote: dc2-leaf3a.arista.com_Ethernet3'
-      description: LLDP topology - validate peer and interface
+      custom_field: 'Local: Ethernet3 - Remote: dc2-leaf3a.arista.com_Ethernet3'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-leaf3a.arista.com
       neighbor_port: Ethernet4
       port: Ethernet4
     result_overwrite:
-      categories:
-      - LLDP Topology
-      custom_field: 'local: Ethernet4 - remote: dc2-leaf3a.arista.com_Ethernet4'
-      description: LLDP topology - validate peer and interface
+      custom_field: 'Local: Ethernet4 - Remote: dc2-leaf3a.arista.com_Ethernet4'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-spine1
       neighbor_port: Ethernet6
       port: Ethernet1
     result_overwrite:
-      categories:
-      - LLDP Topology
-      custom_field: 'local: Ethernet1 - remote: dc2-spine1_Ethernet6'
-      description: LLDP topology - validate peer and interface
+      custom_field: 'Local: Ethernet1 - Remote: dc2-spine1_Ethernet6'
 - VerifyLLDPNeighbors:
     neighbors:
     - neighbor_device: dc2-spine2
       neighbor_port: Ethernet6
       port: Ethernet2
     result_overwrite:
-      categories:
-      - LLDP Topology
-      custom_field: 'local: Ethernet2 - remote: dc2-spine2_Ethernet6'
-      description: LLDP topology - validate peer and interface
+      custom_field: 'Local: Ethernet2 - Remote: dc2-spine2_Ethernet6'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.124
@@ -99,10 +87,7 @@ anta.tests.connectivity:
       source: 10.255.255.125
       vrf: default
     result_overwrite:
-      categories:
-      - IP Reachability
-      custom_field: 'Source: dc2-leaf3b.arista.com_Ethernet1 - Destination: dc2-spine1_Ethernet6'
-      description: ip reachability test p2p links
+      custom_field: 'Source: P2P Interface Ethernet1 - Destination: dc2-spine1_Ethernet6'
 - VerifyReachability:
     hosts:
     - destination: 10.255.255.126
@@ -110,10 +95,7 @@ anta.tests.connectivity:
       source: 10.255.255.127
       vrf: default
     result_overwrite:
-      categories:
-      - IP Reachability
-      custom_field: 'Source: dc2-leaf3b.arista.com_Ethernet2 - Destination: dc2-spine2_Ethernet6'
-      description: ip reachability test p2p links
+      custom_field: 'Source: P2P Interface Ethernet2 - Destination: dc2-spine2_Ethernet6'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.1
@@ -121,11 +103,7 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc2-leaf3b.arista.com - 10.255.128.18/32 Destination:
-        10.255.0.1'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc1-spine1_10.255.0.1'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.2
@@ -133,11 +111,7 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc2-leaf3b.arista.com - 10.255.128.18/32 Destination:
-        10.255.0.2'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc1-spine2_10.255.0.2'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.3
@@ -145,11 +119,7 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc2-leaf3b.arista.com - 10.255.128.18/32 Destination:
-        10.255.0.3'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc1-leaf1a_10.255.0.3'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.4
@@ -157,11 +127,7 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc2-leaf3b.arista.com - 10.255.128.18/32 Destination:
-        10.255.0.4'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc1-leaf1b_10.255.0.4'
 - VerifyReachability:
     hosts:
     - destination: 10.255.0.5
@@ -169,11 +135,7 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc2-leaf3b.arista.com - 10.255.128.18/32 Destination:
-        10.255.0.5'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc1-leaf2a_10.255.0.5'
 - VerifyReachability:
     hosts:
     - destination: 10.255.2.1
@@ -181,11 +143,7 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc2-leaf3b.arista.com - 10.255.128.18/32 Destination:
-        10.255.2.1'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc1-wan1_10.255.2.1'
 - VerifyReachability:
     hosts:
     - destination: 10.255.2.2
@@ -193,11 +151,7 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc2-leaf3b.arista.com - 10.255.128.18/32 Destination:
-        10.255.2.2'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc1-wan2_10.255.2.2'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.11
@@ -205,11 +159,7 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc2-leaf3b.arista.com - 10.255.128.18/32 Destination:
-        10.255.128.11'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc2-spine1_10.255.128.11'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.12
@@ -217,11 +167,7 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc2-leaf3b.arista.com - 10.255.128.18/32 Destination:
-        10.255.128.12'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc2-spine2_10.255.128.12'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.13
@@ -229,11 +175,7 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc2-leaf3b.arista.com - 10.255.128.18/32 Destination:
-        10.255.128.13'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc2-leaf1a_10.255.128.13'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.14
@@ -241,11 +183,7 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc2-leaf3b.arista.com - 10.255.128.18/32 Destination:
-        10.255.128.14'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc2-leaf1b_10.255.128.14'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.15
@@ -253,11 +191,7 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc2-leaf3b.arista.com - 10.255.128.18/32 Destination:
-        10.255.128.15'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc2-leaf2a_10.255.128.15'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.16
@@ -265,11 +199,7 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc2-leaf3b.arista.com - 10.255.128.18/32 Destination:
-        10.255.128.16'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc2-leaf2b_10.255.128.16'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.17
@@ -277,11 +207,7 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc2-leaf3b.arista.com - 10.255.128.18/32 Destination:
-        10.255.128.17'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc2-leaf3a.arista.com_10.255.128.17'
 - VerifyReachability:
     hosts:
     - destination: 10.255.128.18
@@ -289,19 +215,19 @@ anta.tests.connectivity:
       source: 10.255.128.18
       vrf: default
     result_overwrite:
-      categories:
-      - Loopback0 Reachability
-      custom_field: 'Source: dc2-leaf3b.arista.com - 10.255.128.18/32 Destination:
-        10.255.128.18'
-      description: Loopback0 Reachability
+      custom_field: 'Source: Loopback0_10.255.128.18 - Destination: dc2-leaf3b.arista.com_10.255.128.18'
 anta.tests.field_notices:
 - VerifyFieldNotice44Resolution: null
 - VerifyFieldNotice72Resolution: null
 anta.tests.hardware:
 - VerifyEnvironmentPower:
+    result_overwrite:
+      custom_field: 'Accepted States: ''ok'''
     states:
     - ok
 - VerifyEnvironmentCooling:
+    result_overwrite:
+      custom_field: 'Accepted States: ''ok'''
     states:
     - ok
 - VerifyTemperature: null
@@ -310,6 +236,9 @@ anta.tests.hardware:
     - Arista Networks
     - Arastra, Inc.
     - Not Present
+    result_overwrite:
+      custom_field: 'Accepted Manufacturers: ''Arista Networks'', ''Arastra, Inc.'',
+        ''Not Present'''
 - VerifyTransceiversManufacturers:
     manufacturers:
     - Not Present
@@ -491,18 +420,14 @@ anta.tests.routing.bgp:
       peers:
       - 10.255.128.11
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP EVPN Peer: 10.255.128.11'
+      custom_field: 'BGP EVPN Peer: dc2-spine1_10.255.128.11'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: evpn
       peers:
       - 10.255.128.12
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP EVPN Peer: 10.255.128.12'
+      custom_field: 'BGP EVPN Peer: dc2-spine2_10.255.128.12'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -510,9 +435,7 @@ anta.tests.routing.bgp:
       - 10.255.129.124
       safi: unicast
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP IPv4 Unicast Peer: 10.255.129.124'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-leaf3a.arista.com_10.255.129.124'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -520,9 +443,7 @@ anta.tests.routing.bgp:
       - 10.255.255.124
       safi: unicast
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP IPv4 Unicast Peer: 10.255.255.124'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-spine1_10.255.255.124'
 - VerifyBGPSpecificPeers:
     address_families:
     - afi: ipv4
@@ -530,180 +451,117 @@ anta.tests.routing.bgp:
       - 10.255.255.126
       safi: unicast
     result_overwrite:
-      categories:
-      - BGP
-      custom_field: 'BGP IPv4 Unicast Peer: 10.255.255.126'
+      custom_field: 'BGP IPv4 Unicast Peer: dc2-spine2_10.255.255.126'
 anta.tests.routing.generic:
 - VerifyRoutingProtocolModel:
     model: multi-agent
     result_overwrite:
-      categories:
-      - BGP
       custom_field: 'Routing protocol model: multi-agent'
-      description: Verifies the configured routing protocol model.
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.0.1
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.0.1 - Peer: dc1-spine1'
     routes:
     - 10.255.0.1
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.0.2
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.0.2 - Peer: dc1-spine2'
     routes:
     - 10.255.0.2
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.0.3
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.0.3 - Peer: dc1-leaf1a'
     routes:
     - 10.255.0.3
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.0.4
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.0.4 - Peer: dc1-leaf1b'
     routes:
     - 10.255.0.4
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.0.5
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.0.5 - Peer: dc1-leaf2a'
     routes:
     - 10.255.0.5
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.2.1
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.2.1 - Peer: dc1-wan1'
     routes:
     - 10.255.2.1
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.2.2
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.2.2 - Peer: dc1-wan2'
     routes:
     - 10.255.2.2
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.128.11
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.128.11 - Peer: dc2-spine1'
     routes:
     - 10.255.128.11
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.128.12
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.128.12 - Peer: dc2-spine2'
     routes:
     - 10.255.128.12
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.128.13
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.128.13 - Peer: dc2-leaf1a'
     routes:
     - 10.255.128.13
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.128.14
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.128.14 - Peer: dc2-leaf1b'
     routes:
     - 10.255.128.14
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.128.15
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.128.15 - Peer: dc2-leaf2a'
     routes:
     - 10.255.128.15
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.128.16
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.128.16 - Peer: dc2-leaf2b'
     routes:
     - 10.255.128.16
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.128.17
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.128.17 - Peer: dc2-leaf3a.arista.com'
     routes:
     - 10.255.128.17
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.128.18
-      description: Remote Lo0 address
+      custom_field: 'Route: 10.255.128.18 - Peer: dc2-leaf3b.arista.com'
     routes:
     - 10.255.128.18
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.1.3
-      description: Remote VTEP address
+      custom_field: 'Route: 10.255.1.3 - Peer: dc1-leaf1a'
     routes:
     - 10.255.1.3
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.1.5
-      description: Remote VTEP address
+      custom_field: 'Route: 10.255.1.5 - Peer: dc1-leaf2a'
     routes:
     - 10.255.1.5
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.129.13
-      description: Remote VTEP address
+      custom_field: 'Route: 10.255.129.13 - Peer: dc2-leaf1a'
     routes:
     - 10.255.129.13
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.129.15
-      description: Remote VTEP address
+      custom_field: 'Route: 10.255.129.15 - Peer: dc2-leaf2a'
     routes:
     - 10.255.129.15
 - VerifyRoutingTableEntry:
     result_overwrite:
-      categories:
-      - Routing Table
-      custom_field: 10.255.129.17
-      description: Remote VTEP address
+      custom_field: 'Route: 10.255.129.17 - Peer: dc2-leaf3a.arista.com'
     routes:
     - 10.255.129.17
 anta.tests.security:
 - VerifyAPIHttpsSSL:
     profile: eAPI_SSL_Profile
+    result_overwrite:
+      custom_field: 'eAPI HTTPS SSL Profile: eAPI_SSL_Profile'
 anta.tests.snmp:
 - VerifySnmpStatus:
     vrf: default
@@ -740,12 +598,7 @@ anta.tests.stp:
     - 20
     priority: 32768
 anta.tests.system:
-- VerifyNTP:
-    result_overwrite:
-      categories:
-      - NTP
-      custom_field: NTP
-      description: Synchronised with NTP server
+- VerifyNTP: null
 - VerifyUptime:
     minimum: 86400
 - VerifyReloadCause: null
